--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -18,6 +18,11 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
 
+    <!-- syntax highlighting -->
+    <link rel="stylesheet" type="text/css" href="{{asset "highlight.js/styles/github.css"}}" />
+    <script type="text/javascript" src="{{asset "highlight.js/highlight.pack.js"}}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
